fixed scrollbar and select-options

--- a/src/pages/Users/style.scss
+++ b/src/pages/Users/style.scss
@@ -5,7 +5,16 @@
   line-height: 20px;
   letter-spacing: 0.2px;
 }
-
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background: #ebeaea;
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  background-color: black;
+}
 main{
   max-width: 1440px;
   position: relative;
@@ -47,31 +56,93 @@ main{
         width: 684px;
         gap: 12px;
         margin-right: 20px;
-
         .css-13cymwt-control, 
-        .css-16xfy0z-control{
-          @include Rubik(400);
-          padding-left: 24px;
-          height: 48px;
-          cursor: pointer;
-          color: #C2C2C2;
-        }
-
-        .css-13cymwt-control{
-          width: 220px;
-        }
-
-        .css-16xfy0z-control{
-          width: 220px;
-          background-color: white;
-          border-radius: 0;
-          &:active{
+          .css-16xfy0z-control{
+            @include Rubik(400);
+            padding-left: 24px;
+            height: 48px;
             cursor: pointer;
+            color: #C2C2C2;
           }
-        }
+          .css-13cymwt-control{
+            width: 220px;
+            color: #C2C2C2;
+              
+          }
+          .css-16xfy0z-control, .css-t3ipsp-control{
+            width: 220px;
+            background-color: white;
+            border-radius: 0;
+            &:active{
+              cursor: pointer;
+            }
+          }
+          .css-894a34-indicatorSeparator{width: 0;}
+          .css-t3ipsp-control{
+            padding-left: 24px;
+            height: 48px;
+            width: 220px;
+            border: 1px solid black;
+            border-color: black;
+            box-shadow: 0 0 0 0 black;
+          }
+        .css-b62m3t-container{
+          
+          .css-1nmdiq5-menu{
+            margin-top: -10px;
+            border: 1px solid black;
+            border-radius: 0px;
+            border-top: 0px;
 
-        .css-894a34-indicatorSeparator{
-          width: 0;
+            .css-qr46ko{
+              
+              .css-d7l1ni-option{
+                background-color: white;
+              }
+              .css-tr4s17-option{
+                background-color: white;
+                color: black;
+              
+                  .checkbox{
+                    width: 0;
+                    height: 0;
+                    opacity: 0;
+                    position: absolute;
+                    z-index: -1;
+                    
+                  }
+                  .custom-checkbox{
+                    position: relative;
+                    width: 24px;
+                    height: 24px;
+                    margin-right: 10px;
+                    background-color: rgb(0, 0, 0);
+                    color: black;
+                    vertical-align:middle;
+                    border: 1px solid black;
+                    display: inline-block;
+                  }
+                  .custom-checkbox::before{
+                    content: "";
+                    display: inline-block;
+                    width: 20px;
+                    height: 20px;
+                    background-image: url("../../components/System.svg");
+                    background-size: contain;
+                    background-repeat: no-repeat;
+
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%) scale(0);
+                    
+                  }
+                  .checkbox:checked + .custom-checkbox::before{
+                    transform: translate(-50%, -50%) scale(1);
+                  }
+                }
+            }
+          }
         }
       }
 
